--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Portfolio website made by Kalle"
     />
-    <title>Kalle Närhi | Portfolio</title>
+    <title>Kalle | Portfolio</title>
     <body>
         <noscript>Please enable JavaScript to view my site correctly.</noscript>
         <div id="root"></div>
